styles: fixed alignment

--- a/src/pages/home/home.module.scss
+++ b/src/pages/home/home.module.scss
@@ -25,7 +25,7 @@
 .view-heatmap {
 	align-items: center;
 	display: flex;
-	justify-content: space-between;
+	justify-content: center;
 	width: 100%;
 }
 
